--- a/www/index.html
+++ b/www/index.html
@@ -2,18 +2,30 @@
 <html>
   <head>
     <title>Manifão.org</title>
-    <link rel="stylesheet" href="css/main.css">
-<!--
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-    <script src="/socket.io/socket.io.js"></script>
--->
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
+    <script src="js/chat.js"></script>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div class="body-container">
-      Hello ! OK
+
+      <div class="chat-container">
+        <div id="my-chat-messages" class="chat-messages"></div>
+
+        <div class="chat-input">
+          <label class="form-label" for="input-name">nome</label>
+          <input id="input-name" class="form-element" placeholder="nome">
+
+          <label class="form-label" for="input-message">mensagem</label>
+          <textarea id="input-message" class="form-element"></textarea>
+
+          <label id="my-input-send-error" class="form-label form-label-error" for="input-send">
+            nome e mensagem precisam ser preenchidos
+          </label>
+          <div id="input-send" class="form-element input-button">Enviar</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
