--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,10 @@
           <label class="form-label" for="input-message">mensagem</label>
           <textarea id="input-message" class="form-element"></textarea>
 
-          <label id="my-input-send-error" class="form-label form-label-error" for="input-send">
+          <label id="my-input-send-error" class="form-label form-label-error" for="infput-send">
             nome e mensagem precisam ser preenchidos
           </label>
-          <div id="input-send" class="form-element input-button">Enviar</div>
+          <button id="input-send" class="form-element input-button">Enviar</button>
         </div>
       </div>
     </div>
