--- a/www/app.html
+++ b/www/app.html
@@ -6,7 +6,7 @@
     <script src="https://use.fontawesome.com/a82e1ef989.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/chat.js"></script>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     <div class="body-container">
@@ -14,7 +14,7 @@
         <div class="header-logo header-element"></div>
         <div class="header-info header-element">
           <div class="header-title">da diversidade</div>
-          <div class="header-counter">1234 conectadas</div>
+          <div class="header-counter">1234 pessoas</div>
         </div>
         <div class="header-icons header-element"></div>
       </div>
