--- a/www/app.html
+++ b/www/app.html
@@ -2,11 +2,26 @@
 <html>
   <head>
     <title>Manifão.org</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <meta name="description" content="Plataforma voltada para o compartilhamento de manifestações de cidadania.">
+    <meta name="keywords" content="manifestação, protesto, cidadania">
+
+    <meta property="og:title" content="Manifão.org">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://manifao.org">
+    <meta property="og:site_name" content="Manifão.org">
+    <meta property="og:description" content="Plataforma voltada para o compartilhamento de manifestações de cidadania.">
+    <meta property="og:image" content="imgs/cover.jpg">
+    <meta property="article:publisher" content="https://www.facebook.com/silo.arte.latitude.rural">
+
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/a82e1ef989.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/chat.js"></script>
     <link rel="stylesheet" href="css/app.css">
+    <link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.ico">
   </head>
   <body>
     <div class="body-container">
