fix app.html meta:url

--- a/www/app.html
+++ b/www/app.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="Manifão.org">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://manifao.org">
+    <meta property="og:url" content="https://manifao.org/app.html">
     <meta property="og:site_name" content="Manifão.org">
     <meta property="og:description" content="Plataforma voltada para o compartilhamento de manifestações de cidadania.">
     <meta property="og:image" content="imgs/cover.jpg">
