--- a/www/index.html
+++ b/www/index.html
@@ -13,11 +13,11 @@
     <meta property="og:url" content="https://manifao.org">
     <meta property="og:site_name" content="Manifão.org">
     <meta property="og:description" content="Plataforma voltada para o compartilhamento de manifestações de cidadania.">
-    <meta property="og:image" content="imgs/cover.jpg">
+    <meta property="og:image" content="/imgs/cover.jpg">
     <meta property="article:publisher" content="https://www.facebook.com/silo.arte.latitude.rural">
 
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.ico">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/imgs/favicon.ico">
   </head>
   <body>
     <div class="body-container">
