--- a/www/app.html
+++ b/www/app.html
@@ -33,11 +33,14 @@
           <div class="header-title">da diversidade</div>
           <div class="header-counter">1234 pessoas</div>
         </div>
-        <div class="header-icons">
-          <i class="fa fa-camera"></i>
-          <i id="add-image-button" class="fa fa-image"></i>
-          <i class="fa fa-volume-up"></i>
-          <input name="imagefile" type="file" id="my-image-input" class="image-input" accept="image/*">
+        <div class="header-buttons">
+          <div class="header-icons">
+            <i class="fa fa-camera"></i>
+            <i id="add-image-button" class="fa fa-image"></i>
+            <i class="fa fa-volume-up"></i>
+            <input name="imagefile" type="file" id="my-image-input" class="image-input" accept="image/*">
+          </div>
+          <div class="header-instruction">clique e envie seu manifão</div>
         </div>
       </div>
 
