--- a/www/app.html
+++ b/www/app.html
@@ -60,7 +60,7 @@
         <div class="image-container">
           <div id="my-image-wall" class="image-wall"></div>
         </div>
-        <div class="video-container">
+        <div id="my-video-container" class="video-container">
           <div class="video-wrapper">
             <iframe id="my-live" src="https://www.youtube-nocookie.com/embed/J3pF2jkQ4vc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
