--- a/www/app.html
+++ b/www/app.html
@@ -35,9 +35,9 @@
         </div>
         <div class="header-buttons">
           <div class="header-icons">
-            <i class="fa fa-camera"></i>
             <i id="add-image-button" class="fa fa-image"></i>
-            <i class="fa fa-volume-up"></i>
+            <i id="add-picture-button" class="fa fa-camera"></i>
+            <i id="add-audio-button" class="fa fa-volume-up"></i>
             <input name="imagefile" type="file" id="my-image-input" class="image-input" accept="image/*">
           </div>
           <div class="header-instruction">clique e envie seu manifão</div>
