adds auto image scroll up

--- a/www/app.html
+++ b/www/app.html
@@ -58,7 +58,9 @@
           </div>
         </div>
         <div class="image-container">
-          <div id="my-image-wall" class="image-wall"></div>
+          <div id="my-image-wall-overflow" class="image-wall-overflow">
+            <div id="my-image-wall" class="image-wall"></div>
+          </div>
         </div>
         <div id="my-video-container" class="video-container">
           <div class="video-wrapper">
