--- a/www/app.html
+++ b/www/app.html
@@ -31,7 +31,7 @@
         <div class="header-logo"></div>
         <div class="header-info">
           <div class="header-title">da diversidade</div>
-          <div class="header-counter">1234 pessoas</div>
+          <div id="my-header-counter" class="header-counter">0 pessoas</div>
         </div>
         <div class="header-buttons">
           <div class="header-icons">
