--- a/www/app.html
+++ b/www/app.html
@@ -51,10 +51,10 @@
           <div class="chat-input">
             <input id="input-name" class="form-element" placeholder="Nome">
             <textarea id="input-message" class="form-element" placeholder="Mensagem"></textarea>
-            <button id="input-send" class="form-element input-button">Enviar</button>
-            <label id="my-input-send-error" class="form-label-error" for="infput-send">
+            <label id="my-input-send-error" class="form-label-error" style="opacity: 0; height:0">
               Nome e mensagem precisam ser preenchidos !!
             </label>
+            <button id="input-send" class="form-element input-button">Enviar</button>
           </div>
         </div>
         <div class="image-container">
