fix header styles

--- a/www/app.html
+++ b/www/app.html
@@ -29,18 +29,22 @@
     <div class="body-container">
       <div class="header-container">
         <div class="header-logo"></div>
-        <div class="header-info">
-          <div class="header-title">da diversidade</div>
-          <div id="my-header-counter" class="header-counter">0 pessoas</div>
-        </div>
-        <div class="header-buttons">
-          <div class="header-icons">
-            <i id="add-image-button" class="fa fa-image"></i>
-            <i id="add-picture-button" class="fa fa-camera"></i>
-            <i id="add-audio-button" class="fa fa-volume-up"></i>
-            <input name="imagefile" type="file" id="my-image-input" class="image-input" accept="image/*">
+        <div class="header-info-wrapper">
+          <div class="header-info">
+            <div class="header-title">da diversidade</div>
+            <div id="my-header-counter" class="header-counter">0 pessoas</div>
           </div>
-          <div class="header-instruction">clique e envie seu manifão</div>
+        </div>
+        <div class="header-buttons-wrapper">
+          <div class="header-buttons">
+            <div class="header-icons">
+              <i id="add-image-button" class="fa fa-image"></i>
+              <i id="add-picture-button" class="fa fa-camera"></i>
+              <i id="add-audio-button" class="fa fa-volume-up"></i>
+              <input name="imagefile" type="file" id="my-image-input" class="image-input" accept="image/*">
+            </div>
+            <div class="header-instruction">clique e envie seu manifão</div>
+          </div>
         </div>
       </div>
 
