update chat sizes

--- a/www/app.html
+++ b/www/app.html
@@ -54,7 +54,7 @@
 
           <div class="chat-input">
             <input id="input-name" class="form-element" placeholder="Nome">
-            <textarea id="input-message" class="form-element" placeholder="Mensagem"></textarea>
+            <input id="input-message" class="form-element" placeholder="Mensagem">
             <label id="my-input-send-error" class="form-label-error" style="opacity: 0; height:0">
               Nome e mensagem precisam ser preenchidos !!
             </label>
