--- a/www/app.html
+++ b/www/app.html
@@ -22,6 +22,7 @@
     <script src="/js/chat.js"></script>
     <script src="/js/images.js"></script>
     <script src="/js/video.js"></script>
+
     <link rel="stylesheet" href="/css/app.css">
     <link rel="shortcut icon" type="image/x-icon" href="/imgs/favicon.ico">
   </head>
@@ -72,6 +73,11 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div id="my-lightbox-container" class="lightbox-container">
+      <div id="my-lightbox-close" class="lightbox-close">X</div>
+      <div id="my-lightbox-image" class="lightbox-image"></div>
     </div>
   </body>
 </html>
