--- a/www/app.html
+++ b/www/app.html
@@ -22,6 +22,7 @@
     <script src="/js/chat.js"></script>
     <script src="/js/images.js"></script>
     <script src="/js/video.js"></script>
+    <script src="/js/photo.js"></script>
 
     <link rel="stylesheet" href="/css/app.css">
     <link rel="shortcut icon" type="image/x-icon" href="/imgs/favicon.ico">
@@ -76,8 +77,22 @@
     </div>
 
     <div id="my-lightbox-container" class="lightbox-container">
-      <div id="my-lightbox-close" class="lightbox-close">X</div>
+      <div class="lightbox-close">X</div>
       <div id="my-lightbox-image" class="lightbox-image"></div>
     </div>
+
+    <div id="my-photo-container" class="lightbox-container">
+      <div class="lightbox-close">X</div>
+      <div id="my-photo-elements-container" class="photo-container">
+        <video id="my-photo-video" class="photo-video" autoplay muted playsinline></video>
+        <canvas id="my-photo-canvas" class="photo-canvas"></canvas>
+        <div class="photo-button-container">
+          <button id="my-photo-take-button" class="photo-button">tirar foto</button>
+          <button id="my-photo-retake-button" class="photo-button" style="display:none;">retirar foto</button>
+          <button id="my-photo-submit-button" class="photo-button" style="display:none;">enviar foto</button>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
