fix photo button labels

--- a/www/app.html
+++ b/www/app.html
@@ -88,8 +88,8 @@
         <canvas id="my-photo-canvas" class="photo-canvas"></canvas>
         <div class="photo-button-container">
           <button id="my-photo-take-button" class="photo-button">tirar foto</button>
-          <button id="my-photo-retake-button" class="photo-button" style="display:none;">retirar foto</button>
-          <button id="my-photo-submit-button" class="photo-button" style="display:none;">enviar foto</button>
+          <button id="my-photo-retake-button" class="photo-button" style="display:none;">tirar novamente</button>
+          <button id="my-photo-submit-button" class="photo-button" style="display:none;">enviar</button>
         </div>
       </div>
     </div>
