--- a/www/app.html
+++ b/www/app.html
@@ -23,6 +23,8 @@
     <script src="/js/images.js"></script>
     <script src="/js/video.js"></script>
     <script src="/js/photo.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+    <script src="/js/poster.js"></script>
 
     <link rel="stylesheet" href="/css/app.css">
     <link rel="shortcut icon" type="image/x-icon" href="/imgs/favicon.ico">
@@ -42,7 +44,7 @@
             <div class="header-icons">
               <i id="add-image-button" class="fa fa-image"></i>
               <i id="add-picture-button" class="fa fa-camera"></i>
-              <i id="add-audio-button" class="fa fa-volume-up"></i>
+              <i id="add-poster-button" class="fa fa-volume-up"></i>
               <input name="imagefile" type="file" id="my-image-input" class="image-input" accept="image/*">
             </div>
             <div class="header-instruction">clique e envie seu manifão</div>
@@ -90,6 +92,19 @@
           <button id="my-photo-take-button" class="photo-button">tirar foto</button>
           <button id="my-photo-retake-button" class="photo-button" style="display:none;">tirar novamente</button>
           <button id="my-photo-submit-button" class="photo-button" style="display:none;">enviar</button>
+        </div>
+      </div>
+    </div>
+
+    <div id="my-poster-container" class="lightbox-container poster-container">
+      <div class="lightbox-close">X</div>
+
+      <div id="my-poster-elements-container" class="photo-container">
+        <canvas id="my-poster-canvas" class="poster-canvas"></canvas>
+        <input id="my-poster-input" class="form-element poster-input"
+               placeholder="escreva uma mensagem" maxlength="50">
+        <div class="photo-button-container">
+          <button id="my-poster-button" class="photo-button">enviar poster</button>
         </div>
       </div>
     </div>
