adds color buttons

--- a/www/app.html
+++ b/www/app.html
@@ -102,7 +102,8 @@
       <div id="my-poster-elements-container" class="photo-container">
         <canvas id="my-poster-canvas" class="poster-canvas"></canvas>
         <input id="my-poster-input" class="form-element poster-input"
-               placeholder="escreva uma mensagem" maxlength="50">
+               placeholder="escreva uma mensagem" maxlength="30">
+        <div id="my-poster-colors-container" class="poster-colors-container"></div>
         <div class="photo-button-container">
           <button id="my-poster-button" class="photo-button">enviar poster</button>
         </div>
