--- a/www/app.html
+++ b/www/app.html
@@ -44,7 +44,7 @@
             <div class="header-icons">
               <i id="add-image-button" class="fa fa-image"></i>
               <i id="add-picture-button" class="fa fa-camera"></i>
-              <i id="add-poster-button" class="fa fa-volume-up"></i>
+              <i id="add-poster-button" class="fa fa-text-height"></i>
               <input name="imagefile" type="file" id="my-image-input" class="image-input" accept="image/*">
             </div>
             <div class="header-instruction">clique e envie seu manifão</div>
