contador de caracteres

--- a/www/app.html
+++ b/www/app.html
@@ -103,6 +103,9 @@
         <canvas id="my-poster-canvas" class="poster-canvas"></canvas>
         <input id="my-poster-input" class="form-element poster-input"
                placeholder="escreva uma mensagem" maxlength="30">
+        <div class="poster-char-counter-wrapper">
+          <div id="my-poster-char-counter" class="poster-char-counter">_</div>
+        </div>
         <div id="my-poster-colors-container" class="poster-colors-container"></div>
         <div class="photo-button-container">
           <button id="my-poster-button" class="photo-button">enviar poster</button>
