undo app publishing

--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
         <div class="home-text">
           Este é um chamado para toda a sociedade mostrar o seu apoio à luta contra o preconceito, contra o fascismo, a favor da garantia dos direitos humanos universais. Neste mês do orgulho LGBTQIAPN+ você pode demonstrar a sua indignação com as problemáticas do país onde mais se mata travestis e onde a homofobia - ainda que seja crime – é uma dolorida realidade. De onde quer que você esteja, domingo, 21/06 é dia de entrar no Manifão da Diversidade num grande protesto coletivo que acontecerá aqui.
         </div>
-        <a href="./app.html"><button class="form-element input-button">entrar</button></a>
+<!--        <a href="./app.html"><button class="form-element input-button">entrar</button></a>-->
       </div>
     </div>
   </body>
