--- a/www/20200621.html
+++ b/www/20200621.html
@@ -72,7 +72,7 @@
         </div>
         <div id="my-video-container" class="video-container">
           <div class="video-wrapper">
-            <iframe id="my-live" src="https://www.youtube-nocookie.com/embed/x6vXPFd1xog" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="my-live" src="https://www.youtube-nocookie.com/embed/LhCHmKk51Kk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
