make app home again

--- a/www/landing.html
+++ b/www/landing.html
@@ -19,6 +19,18 @@
     <link rel="stylesheet" href="/css/home.css">
     <link rel="shortcut icon" type="image/x-icon" href="/imgs/favicon.ico">
   </head>
-  <body></body>
-  <script>window.location.href = "/";</script>
+  <body>
+    <div class="body-container">
+      <div class="home-container">
+        <div class="home-logo"></div>
+        <div class="home-subtitle">
+          manifão da diversidade domingo, 21/06 de 15h às 18h
+        </div>
+        <div class="home-text">
+          Este é um chamado para toda a sociedade mostrar o seu apoio à luta contra o preconceito, contra o fascismo, a favor da garantia dos direitos humanos universais. Neste mês do orgulho LGBTQIAPN+ você pode demonstrar a sua indignação com as problemáticas do país onde mais se mata travestis e onde a homofobia - ainda que seja crime – é uma dolorida realidade. De onde quer que você esteja, domingo, 21/06 é dia de entrar no Manifão da Diversidade num grande protesto coletivo que acontecerá aqui.
+        </div>
+<!--        <a href="./app.html"><button class="form-element input-button">entrar</button></a>-->
+      </div>
+    </div>
+  </body>
 </html>
