--- a/www/landing.html
+++ b/www/landing.html
@@ -24,7 +24,7 @@
       <div class="home-container">
         <div class="home-logo"></div>
         <div class="home-subtitle">
-          próximo manifão<br>dia 02/08 de 18h às 20h
+          próximo manifão | antídoto<br>dia 02/08 de 18h às 20h
         </div>
         <div class="home-text"></div>
       </div>
