--- a/www/manifao.html
+++ b/www/manifao.html
@@ -72,7 +72,7 @@
         </div>
         <div id="my-video-container" class="video-container">
           <div class="video-wrapper">
-            <iframe id="my-live" src="https://www.youtube.com/embed/dQU4qqK8o0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe id="my-live" src="https://www.youtube.com/embed/YkYdZtg98kw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
