--- a/www/landing.html
+++ b/www/landing.html
@@ -24,7 +24,7 @@
       <div class="home-container">
         <div class="home-logo"></div>
         <div class="home-subtitle">
-          próximo manifão | da democracia<br>dia 07/09 de 18h às 21h
+          próximo manifão | aguarde<br>@manifao
         </div>
         <div class="home-text"></div>
       </div>
