--- a/www/manifao.html
+++ b/www/manifao.html
@@ -33,12 +33,14 @@
     <div class="body-container">
       <div class="header-container">
         <div class="header-logo"></div>
+
         <div class="header-info-wrapper">
           <div class="header-info">
             <div class="header-title">do futuro</div>
             <div id="my-header-counter" class="header-counter">0 pessoas</div>
           </div>
         </div>
+
         <div class="header-buttons-wrapper">
           <div class="header-buttons">
             <div class="header-icons">
@@ -48,6 +50,13 @@
               <input name="imagefile" type="file" id="my-image-input" class="image-input" accept="image/*">
             </div>
             <div class="header-instruction">clique e envie seu manifão</div>
+          </div>
+        </div>
+
+        <div class="header-about-wrapper">
+          <div class="header-about">
+            <div class="header-about-title">sobre</div>
+            <div class="header-about-text">manifão é uma plataforma online interativa onde todes podem se reunir e se manifestar num mesmo dia em um só lugar, em função da mesma causa relacionada aos direitos humanos, mesmo que à distância. manifão não é uma iniciativa comercial, governamental ou política-partidária. manifão não se responsabiliza pelo conteúdo enviado pelos manifestantes. manifão não substitui as manifestações de rua, ao contrário, é uma plataforma para somar, quebrando barreiras geográficas e unindo forças.</div>
           </div>
         </div>
       </div>
