--- a/www/logo.html
+++ b/www/logo.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="/imgs/favicon.ico">
   </head>
   <body>
-    <div class="body-container">testing!
+    <div class="body-container">testing..
       <div class="home-logo"></div>
     </div>
   </body>
