--- a/www/landing.html
+++ b/www/landing.html
@@ -24,7 +24,7 @@
       <div class="home-container">
         <div class="home-logo"></div>
         <div class="home-subtitle">
-          próximo manifão | aguarde<br>@manifao
+          próximo manifão | manifão do consumo<br>25/10 - 18h
         </div>
         <div class="home-text"></div>
       </div>
