--- a/www/landing.html
+++ b/www/landing.html
@@ -24,7 +24,7 @@
       <div class="home-container">
         <div class="home-logo"></div>
         <div class="home-subtitle">
-          próximo manifão | manifão do consumo<br>25/10 - 18h
+          próximo manifão | manifão crise do COVID-19<br>24/11 - 19h
         </div>
         <div class="home-text"></div>
       </div>
