--- a/www/manifao.html
+++ b/www/manifao.html
@@ -56,7 +56,7 @@
         <div class="header-about-wrapper">
           <div class="header-about">
             <div class="header-about-title">sobre</div>
-            <div class="header-about-text">manifão é uma plataforma online interativa onde todes podem se reunir e se manifestar num mesmo dia em um só lugar, em função da mesma causa relacionada aos direitos humanos, mesmo que à distância. manifão não é uma iniciativa comercial, governamental ou política-partidária. manifão não se responsabiliza pelo conteúdo enviado pelos manifestantes. manifão não substitui as manifestações de rua, ao contrário, é uma plataforma para somar, quebrando barreiras geográficas e unindo forças.</div>
+            <div class="header-about-text">https://youtu.be/FaKgMsfQB0E</div>
           </div>
         </div>
       </div>
