--- a/www/manifao.html
+++ b/www/manifao.html
@@ -56,7 +56,7 @@
         <div class="header-about-wrapper">
           <div class="header-about">
             <div class="header-about-title">sobre</div>
-            <div class="header-about-text">https://youtu.be/FaKgMsfQB0E</div>
+            <div class="header-about-text">manifão = manifesto + cidadão</div>
           </div>
         </div>
       </div>
