--- a/www/landing.html
+++ b/www/landing.html
@@ -24,7 +24,7 @@
       <div class="home-container">
         <div class="home-logo"></div>
         <div class="home-subtitle">
-          próximo manifão | Cordão da Mentira<br>01/04 - 19h30
+          próximo manifão | MANIFÃO EMERGÊNCIA CLIMÁTICA - CULPADO OU INOCENTE?<br>21/04 - 18h00
         </div>
         <div class="home-text"></div>
       </div>
