--- a/www/manifao.html
+++ b/www/manifao.html
@@ -36,7 +36,7 @@
 
         <div class="header-info-wrapper">
           <div class="header-info">
-            <div class="header-title">culpado</div>
+            <div class="header-title">do futuro</div>
             <div id="my-header-counter" class="header-counter">0 pessoas</div>
           </div>
         </div>
