--- a/www/landing.html
+++ b/www/landing.html
@@ -24,7 +24,7 @@
       <div class="home-container">
         <div class="home-logo"></div>
         <div class="home-subtitle">
-          próximo manifão | insurreição<br>07/09 - 14h00
+          próximo manifão | Banzeiro òkòtó<br>04/11 - 19h30
         </div>
         <div class="home-text"></div>
       </div>
